Fixed bug: text overflow on flip card

--- a/src/app/learn/flip-card/flip-card.component.scss
+++ b/src/app/learn/flip-card/flip-card.component.scss
@@ -6,7 +6,11 @@
     transition: 0.5s;
     transform-style: preserve-3d;
 
-    .front, .back {
+    .front,
+    .back {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       backface-visibility: hidden;
       position: absolute;
       top: 0;
@@ -14,7 +18,6 @@
       background: #fff;
       color: #000;
       border-radius: 10px;
-      line-height: 200px;
     }
     .front {
       z-index: 2;
@@ -26,7 +29,6 @@
   }
 }
 
-.card-container.flipped .card-flipper,
 .card-container.flipped .card-flipper {
   transform: rotateY(-180deg);
 }
